<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profil">


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:onClick="btnKeluar"
        android:text="@string/button_logout" />

    <TextView
        android:id="@+id/textVieww"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="85dp"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="142dp"
        android:text="@string/abcdefg_gmail_com"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLogout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="116dp"
        android:text="Ke Chat"
        android:onClick="kechat"/>
</RelativeLayout>