<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passedittxt"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passedittxt"
        android:hint="@string/Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="218dp"
        android:onClick="btnLogin"
        android:text="Masok" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="294dp"
        android:text="Belum Terdaftar? Ayo daftar"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="109dp"
        android:onClick="keHalamanDaftar"
        android:text="@string/balik_daftar"
        android:textColor="@android:color/holo_blue_light" />

</RelativeLayout>